--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="View trending GIFs from GIPHY and save them offline by clicking on the heart!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- TODO: 7a - Declare a theme color in meta (use #f44336 or your favorite color) -->
+    <meta name="theme-color" content="#f44336">
     <!-- Icons -->
     <link rel="icon" type="image/png" href="/assets/images/icon-192x192.png">
     <link name="msapplication-TileImage" type="image/png" href="/assets/images/icon-144x144.png">
@@ -94,6 +95,7 @@
         media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
         href="/assets/images/splash-1536x2048.png" />
     <!-- TODO: 8b - Use Manifest here by using a <link> -->
+    <link rel="manifest" href="/manifest.webmanifest">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/assets/css/normalize.css">
     <link rel="stylesheet" href="/assets/css/fonts.css">
