--- a/search.html
+++ b/search.html
@@ -8,6 +8,7 @@
         content="Search for your favorite GIFs on GIPHY and save them offline by clicking on the heart!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- TODO: 7c - Declare a theme color in meta (use #f44336 or your favorite color) -->
+    <meta name="theme-color" content="#f44336">
     <!-- Icons -->
     <link rel="icon" type="image/png" href="/assets/images/icon-192x192.png">
     <link name="msapplication-TileImage" type="image/png" href="/assets/images/icon-144x144.png">
@@ -94,6 +95,7 @@
     <link rel="apple-touch-startup-image"
         media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
         href="/assets/images/splash-1536x2048.png" />
+    <link rel="manifest" href="/manifest.webmanifest">
     <!-- TODO: 8d - Use Manifest here by using a <link> -->
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/assets/css/normalize.css">
